@@ -2,7 +2,9 @@ package com.goorm.insideout.club.service;
 
 import java.io.IOException;
 import java.time.LocalDateTime;
+import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -11,7 +13,9 @@ import com.goorm.insideout.chatroom.domain.ChatRoom;
 import com.goorm.insideout.chatroom.repository.ChatRoomRepository;
 import com.goorm.insideout.club.dto.responseDto.ClubBoardResponseDto;
 import com.goorm.insideout.club.dto.responseDto.ClubListResponseDto;
+import com.goorm.insideout.club.entity.ClubApply;
 import com.goorm.insideout.club.entity.ClubUser;
+import com.goorm.insideout.club.repository.ClubApplyRepository;
 import com.goorm.insideout.club.repository.ClubRepository;
 import com.goorm.insideout.club.dto.requestDto.ClubRequestDto;
 import com.goorm.insideout.club.entity.Club;
@@ -19,7 +23,10 @@ import com.goorm.insideout.club.repository.ClubUserRepository;
 import com.goorm.insideout.global.exception.ErrorCode;
 import com.goorm.insideout.global.exception.ModongException;
 import com.goorm.insideout.meeting.dto.request.SearchRequest;
+import com.goorm.insideout.image.domain.ProfileImage;
+import com.goorm.insideout.image.repository.ProfileImageRepository;
 import com.goorm.insideout.user.domain.User;
+import com.goorm.insideout.user.repository.UserRepository;
 import com.goorm.insideout.userchatroom.repository.UserChatRoomRepository;
 
 import lombok.RequiredArgsConstructor;
@@ -33,6 +40,9 @@ public class ClubServiceImpl implements ClubService{
 	private final ChatRoomRepository chatRoomRepository;
 	private final UserChatRoomRepository userChatRoomRepository;
 	private final ClubUserRepository clubUserRepository;
+	private final ClubApplyRepository clubApplyRepository;
+	private final UserRepository userRepository;
+	private final ProfileImageRepository profileImageRepository;
 
 	String domainPrefix = "https://insideout.site:8082/resources/upload/images/club_image/";
 
@@ -40,6 +50,7 @@ public class ClubServiceImpl implements ClubService{
 
 	@Override
 	public Club createClub(ClubRequestDto clubRequestDto, /*MultipartFile multipartFile,*/ User user) throws IOException {
+
 		String clubImgUrl;
 		/*
 		if (multipartFile == null || multipartFile.isEmpty()) {
@@ -56,28 +67,41 @@ public class ClubServiceImpl implements ClubService{
 
 		 */
 
-		Club club = clubRepository.save(clubBuilder(clubRequestDto, /*clubImgUrl,*/ user));
-
-
+		Club club = clubBuilder(clubRequestDto, /*clubImgUrl,*/ user);
+		clubRequestDto.setEnum(club);
 		club.setCreatedAt(LocalDateTime.now());
+
+		clubRepository.save(club);
+
+		ProfileImage profileImage = profileImageRepository.findByUserId(user.getId()).get();
 
 		ClubUser clubUser = ClubUser.builder()
 			.userId(user.getId())
 			.clubId(club.getClubId())
 			.userName(user.getName())
-			//.profileImgUrl(user.getProfileImgUrl)
-			//.mannerTemp(user.getMannerTemp)
+			.profileImgUrl(profileImage.getImage().getUrl())
+			//.profileImage(profileImage)
+			.mannerTemp(user.getMannerTemp())
 			.build();
-		clubUserRepository.save(clubUser);
 
+		clubUserRepository.save(clubUser);
 
 		return club;
 	}
 
+
 	@Override
-	public Club findByClubId(Long ClubId) {
-		return clubRepository.findById(ClubId)
-			.orElseThrow(()->ModongException.from(ErrorCode.CLUB_NOT_FOUND));
+	public Club findByClubId(Long clubId) {
+
+		return clubRepository.findById(clubId).orElseThrow(
+			() -> ModongException.from(ErrorCode.CLUB_NOT_FOUND));
+	}
+
+	@Override
+	public ClubBoardResponseDto findClubBoard(Long clubId) {
+		Club byClubId = findByClubId(clubId);
+
+		return ClubBoardResponseDto.of(byClubId);
 	}
 
 	@Override
@@ -117,9 +141,13 @@ public class ClubServiceImpl implements ClubService{
 		 */
 
 		Club modify_club = clubBuilder(clubRequestDto, user);
+
+		clubRequestDto.setEnum(modify_club);
 		modify_club.setMemberCount(club.getMemberCount());
 		modify_club.setCreatedAt(club.getCreatedAt());
 		modify_club.setClubId(clubId);
+		modify_club.setChat_room_id(club.getChat_room_id());
+		modify_club.setChatRoom(club.getChatRoom());
 
 		return clubRepository.save(modify_club);
 
@@ -145,19 +173,45 @@ public class ClubServiceImpl implements ClubService{
 		return clubRepository.findByConditionAndSortType(condition);
 	}
 
+	/*
 	@Override
 	public Club belongToClub(Long userId) {
-		return clubRepository.belongToTeam(userId).orElseThrow(()->ModongException.from(ErrorCode.CLUB_NOT_AUTHORIZED));
+		return clubRepository.belongToClub(userId).orElseThrow(()->ModongException.from(ErrorCode.CLUB_NOT_AUTHORIZED));
 	}
+
+	 */
 
 
 	@Override
 	public List<ClubListResponseDto> findByCategory(String category) {
+
+
 		return clubRepository.findByCategoryJQL(category).stream()
 			.map(ClubListResponseDto::new)
-			.toList();
+			.collect(Collectors.toList());
 	}
 
+	@Override
+	public List<ClubListResponseDto> findMyClub(Long userId) {
+		return clubRepository.belongToClub(userId).stream()
+			.map(ClubListResponseDto::new)
+			.collect(Collectors.toList());
+	}
+
+	@Override
+	public List<ClubListResponseDto> findMyApplyClub(Long userId) {
+		List<ClubApply> byUserIdJQL = clubApplyRepository.findByUserIdJQL(userId);
+		List<Club> clubList = new ArrayList<>();
+
+		for(ClubApply clubApply : byUserIdJQL){
+			Long clubId = clubApply.getClubId();
+			clubList.add(findByClubId(clubId));
+		}
+
+		return clubList.stream()
+			.map(ClubListResponseDto::new)
+			.collect(Collectors.toList());
+	}
 
 
 	/*
@@ -199,16 +253,19 @@ public class ClubServiceImpl implements ClubService{
 	public Club clubBuilder(ClubRequestDto ClubRequestDto, User user) {
 
 		return Club.builder()
-			.clubName(ClubRequestDto.getClubName())
-			.category(ClubRequestDto.getCategory())
-			.content(ClubRequestDto.getContent())
+			.clubName(ClubRequestDto.getName())
+			.categoryDetail(ClubRequestDto.getCategoryDetail())
+			.content(ClubRequestDto.getIntroduction())
 			.date(ClubRequestDto.getDate())
-			.region(ClubRequestDto.getRegion())
-			.question(ClubRequestDto.getQuestion())
-			.memberLimit(ClubRequestDto.getMemberLimit())
+			.region(ClubRequestDto.getActivityRegion())
+			.joinQuestions(ClubRequestDto.getJoinQuestions())
+			.memberLimit(ClubRequestDto.getParticipantLimit())
 			.memberCount(1)
-			.price(ClubRequestDto.getPrice())
-			.ageLimit(ClubRequestDto.getAgeLimit())
+			.hasMembershipFee(ClubRequestDto.isHasMembershipFee())
+			.price(ClubRequestDto.getMembershipFeeAmount())
+			.minAge(ClubRequestDto.getMinAge())
+			.maxAge(ClubRequestDto.getMaxAge())
+			.rules(ClubRequestDto.getRules())
 			.owner(user)
 			.build();
 
